--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "next": "14.1.4",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
