--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap-icons": "^1.11.3",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
+    "next-connect": "^1.0.0-next.4",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
